--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <p>this is the folder for all projects of cnc</p>
-    <p>by az wajahat </p>
+    <p>by az wajahat abbas</p>
 </body>
 </html>
