--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>projects</title>
 </head>
 <body>
-    <p>this is the folder for all projects of cnc</p>
-    <p>by az wajahat abbas</p>
+    <h1>MY JAVASCRIPT PROJECTS </h1>
+    <ol>
+        <li>Project 1</li>
+    </ol>
 </body>
 </html>
