--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>MY JAVASCRIPT PROJECTS </h1>
     <ol>
-        <li>Project 1</li>
+        <li><a href="/p01/index.html">Html Form Validator</a></li>
     </ol>
 </body>
 </html>
