project 2 seat selection at movie theatre html done
all 3 files are created for this project
-index.html
-style.css
-script.js

and html code is completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>MY JAVASCRIPT PROJECTS </h1>
     <ol>
         <li><a href="/p01/index.html">Html Form Validator</a></li>
+        <li><a href="/p02/index.html">Seat Selection At Movie Theatre</a></li>
     </ol>
 </body>
 </html>
