comments added rightly
<!---->
comments bnadie hain

--- a/p02/index.html
+++ b/p02/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="movie-container">                                        //sbse phle class movie container bnaeinge js mein sb kam horha hoga
-        <label>Please select your movie</label>                          //phir label create krrhe hain movie select krne ke liye hm 
-        <select id="movie">                                              //phir select tag mein option tag kholke sb krrhe hain hm 
+    <div class="movie-container">                                      <!--   //sbse phle class movie container bnaeinge js mein sb kam horha hoga -->
+        <label>Please select your movie</label>                        <!--  //phir label create krrhe hain movie select krne ke liye hm   -->
+        <select id="movie">                                            <!--  //phir select tag mein option tag kholke sb krrhe hain hm    -->
             <option value="15">Top Gun ($15)</option>
             <option value="12">No Time To Die ($12)</option>
             <option value="20">Mission Impossible ($20)</option>
@@ -18,10 +18,10 @@
         </select>
     </div>
 
-        <ul class="legend">                                  //legend create kra hai hmne jo btarha hai hmein ke seats available,occupy aur seats knsi hain hmare paas
+        <ul class="legend">                                 <!-- //legend create kra hai hmne jo btarha hai hmein ke seats available,occupy aur seats knsi hain hmare paas -->
             <li>
-                <div class="seat"></div>                      //list items 3 tareke ke h nge hmare paas seats , available seats , occupied seats 
-                <small>Available</small>                      //classes div bneinge take style krlein aur phr small se btadeinge text unmein hm
+                <div class="seat"></div>                    <!-- //list items 3 tareke ke h nge hmare paas seats , available seats , occupied seats -->
+                <small>Available</small>                     <!-- //classes div bneinge take style krlein aur phr small se btadeinge text unmein hm  -->
             </li>
             <li>
                 <div class="seat selected"></div>
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <p class="text">                                          //span create krrhe hain take js se data uthke ae aur classes aur id isiliye bnarhe hain hm
+        <p class="text">                                          <!--//span create krrhe hain take js se data uthke ae aur classes aur id isiliye bnarhe hain hm -->
             You have Selected <span id="count">0</span>  seats for a total price of $<span class="total">0</span>. 
         </p>
         
