updated frontpage html
just name change 2020

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>projects</title>
 </head>
 <body>
-    <h1>MY JAVASCRIPT PROJECTS </h1>
+    <h1>MY JAVASCRIPT PROJECTS 2020 </h1>
     <ol>
         <li><a href="/p01/index.html">Html Form Validator</a></li>
         <li><a href="/p02/index.html">Seat Selection At Movie Theatre</a></li>
