--- a/p02/index.html
+++ b/p02/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <p class="text">                                          <!--//span create krrhe hain take js se data uthke ae aur classes aur id isiliye bnarhe hain hm -->
-            You have Selected <span id="count">0</span>  seats for a total price of $<span class="total">0</span>. 
+            You have Selected <span id="count">0</span>  seats for a total price of $<span id="total">0</span>. 
         </p>
         
 
