--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ol>
         <li><a href="/p01/index.html">Html Form Validator</a></li>
         <li><a href="/p02/index.html">Seat Selection At Movie Theatre</a></li>
+        <li><a href="video player/index.html">Video Player</a></li>
     </ol>
 </body>
 </html>
