--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>MY JAVASCRIPT PROJECTS 2020 </h1>
     <ol>
-        <li><a href="/p01/index.html">Html Form Validator</a></li>
-        <li><a href="/p02/index.html">Seat Selection At Movie Theatre</a></li>
+        <li><a href="/form validator/index.html">Html Form Validator</a></li>
+        <li><a href="/movie selector/index.html">Seat Selection At Movie Theatre</a></li>
         <li><a href="video player/index.html">Video Player</a></li>
     </ol>
 </body>
