added to porfolio page
added to venomaz.surge.sh

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li><a href="/form validator/index.html">Html Form Validator</a></li>
         <li><a href="/movie selector/index.html">Seat Selection At Movie Theatre</a></li>
         <li><a href="video player/index.html">Video Player</a></li>
+        <li><a href="currency exchange/index.html">Video Player</a></li>
     </ol>
 </body>
 </html>
