front page updated
css added and html updated

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>projects</title>
 </head>
 <body>
-    <h1>MY JAVASCRIPT PROJECTS 2020 </h1>
+    <h1> TECH_AZ</h1>
     <ol>
         <li><a href="/form validator/index.html">Html Form Validator</a></li>
         <li><a href="/movie selector/index.html">Seat Selection At Movie Theatre</a></li>
