html css completed
index.html,style.css completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="/movie selector/index.html">Seat Selection At Movie Theatre</a></li>
         <li><a href="video player/index.html">Video Player</a></li>
         <li><a href="currency exchange/index.html">Currency Exchange</a></li>
+        <li><a href="dom array methods/index.html">High Order Array Methods</a></li>
     </ol>
 </body>
 </html>
