--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li><a href="video player/index.html">Video Player</a></li>
         <li><a href="currency exchange/index.html">Currency Exchange</a></li>
         <li><a href="dom array methods/index.html">High Order Array Methods</a></li>
+        <li><a href="landing page/index.html">Landing Page</a></li>
+
     </ol>
 </body>
 </html>
