--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <title>projects</title>
 </head>
+
 <body>
     <h1> TECH_AZ</h1>
     <ol>
@@ -13,7 +15,8 @@
         <li><a href="currency exchange/index.html">Currency Exchange</a></li>
         <li><a href="dom array methods/index.html">High Order Array Methods</a></li>
         <li><a href="landing page/index.html">Landing Page</a></li>
-
+        <li><a href="hangman game/index.html">Hangman Game</a></li>
     </ol>
 </body>
+
 </html>
