html css and js half
error arha hai abhi

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="dom array methods/index.html">High Order Array Methods</a></li>
         <li><a href="landing page/index.html">Landing Page</a></li>
         <li><a href="hangman game/index.html">Hangman Game</a></li>
+        <li><a href="random meal selector/index.html">Random Meal Selector</a></li>
     </ol>
 </body>
 
