completed this project
html,css,js done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="landing page/index.html">Landing Page</a></li>
         <li><a href="hangman game/index.html">Hangman Game</a></li>
         <li><a href="random meal selector/index.html">Random Meal Selector</a></li>
+        <li><a href="expense tracker/index.html">Expense Tracker</a></li>
     </ol>
 </body>
 
